organized and labeled CSS

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,7 +29,7 @@
     <!-- Image of Marketing Meeting -->
     <div class="hero"></div>
     <!-- Main Body -->
-    <section class="content">
+    <section class="main">
         <div id="search-engine-optimization" class="main-body">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Showcasing how mobile users depend on Search engine optimization to find the right business"/>
                 <h2>Search Engine Optimization</h2>
