--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon - </title>
 </head>
 
 <body>
     <!-- Header and Search Bar -->
-    <section class="header">
+    <header>
         
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,8 +24,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </section>
+        </nav>
+    </header>
     <!-- Image of Marketing Meeting -->
     <div class="hero"></div>
     <!-- Main Body -->
@@ -53,7 +53,7 @@
         </div>
     </section>
     <!-- Benefits -->
-    <section class="benefits">
+    <aside class="benefits">
         <div class="benefit-section">
                 <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -63,7 +63,7 @@
         </div>
         <div class="benefit-section">
                 <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png"  />
+            <img src="./assets/images/brand-awareness.png" alt=""  />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -75,14 +75,14 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </section>
+    </aside>
     <!-- Footer -->
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
